--- a/index.html
+++ b/index.html
@@ -5,8 +5,13 @@
     <meta name="viewport" content="width=device-width">
     <title>sandra.o</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,100' rel='stylesheet' type='text/css'>
+
   </head>
   <body>
+    <div id="app">
+
     <div class="navbar-container">
       <div class="site-nav-animation-wrapper menu-animation-wrapper">
         <div class="site-nav-animated-background menu-animated-background"></div>
@@ -52,7 +57,7 @@
       <h3 class="section-header">About me</h3>
         <div class="grid-item grid-item-skills">
         <h3 class="grid-item-header">Skills</h3>
-        <div class="grid-item-content">Content goes here</div>
+        <div class="grid-item-content" id="skills-content"></div>
       </div>
       <div class="grid-item grid-item-education">
         <h3 class="grid-item-header">Education</h3>
@@ -88,5 +93,17 @@
         <div class="grid-item-content">Content goes here</div>
       </div>
     </div>
+        </div>
   </body>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+
+  <script src="skillbar.js"></script>
+
+  <script>
+
+
+
+
+  </script>
 </html>
