--- a/progressbar.html
+++ b/progressbar.html
@@ -1,5 +1,3 @@
-<!DOCTYPE HTML>
-
 <html>
 
 <head>
@@ -8,7 +6,7 @@
   <link rel="stylesheet" href="https://raw.github.com/daneden/animate.css/master/animate.css" >
 
   <style type="text/css">
-    .wrapper{
+    #wrapper{
         width: 400px;
         font-family: 'Roboto', sans-serif;
     }
@@ -107,9 +105,7 @@
 </head>
 
 <body>
-    <div class="wrapper">
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-        <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div id="wrapper">
         <div class="skill">
             <p>HTML</p>
             <div class="skill-bar skill1 wow slideInLeft animated">
