--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,100' rel='stylesheet' type='text/css'>
-
+    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body>
-    <div id="app">
-
     <div class="navbar-container">
       <div class="site-nav-animation-wrapper menu-animation-wrapper">
         <div class="site-nav-animated-background menu-animated-background"></div>
@@ -30,10 +29,10 @@
             </div>
 
             <ul class="nav-categories">
-              <li class="nav-category js-nav-animate"><a href="/" class="nav-link">About me</a></li>
-              <li class="nav-category js-nav-animate"><a href="/blog/" class="nav-link">Portfolio</a></li>
-              <li class="nav-category js-nav-animate"><a href="/blog/tutorials/" class="nav-link">GitHub</a></li>
-              <li class="nav-category js-nav-animate"><a href="/speaking/" class="nav-link">Contact</a></li>
+              <li class="nav-category js-nav-animate"><a href="#bookmark-about" class="nav-link">About</a></li>
+              <li class="nav-category js-nav-animate"><a href="#bookmark-portfolio" class="nav-link">Portfolio</a></li>
+              <li class="nav-category js-nav-animate"><a href="#bookmark-github" class="nav-link">GitHub</a></li>
+              <li class="nav-category js-nav-animate"><a href="#bookmark-contact" class="nav-link">Contact</a></li>
             </ul>
           </div>
         </div>
@@ -50,60 +49,89 @@
 
     <div class="content-wrapper heroSection">
       <h3 class="header-subheader">sandra.o</h3>
-      <h2 class="single-page-header header-header">Front End Developer student</h2>
+      <h2 class="single-page-header header-header">Front End <br> Developer</h2>
+      <h2 class="header-header2">student</h2>
+      <div class="arrow bounce"><i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i></div>
+</div>
+
     </div>
 
     <div class="content-wrapper grid-items gridItems-peak">
-      <h3 class="section-header">About me</h3>
-        <div class="grid-item grid-item-skills">
+      <h3 class="section-header">About</h3>
+
+        <div class="grid-item grid-item-skills" id="bookmark-about">
         <h3 class="grid-item-header">Skills</h3>
         <div class="grid-item-content" id="skills-content"></div>
       </div>
+
       <div class="grid-item grid-item-education">
         <h3 class="grid-item-header">Education</h3>
-        <div class="grid-item-content">Content goes here</div>
+        <div class="grid-item-content">
+          <img id="logo" src="./img/logoMI.png" alt="Medieinstitutet">
+          <p>I'm currently studying a 2-year program at Medieinstitutet with a mission to become an awesome Front-end developer.
+          Check out my education here.</p>
+          </div>
       </div>
-      <div class="grid-item grid-item-facts">
+
+      <div class="grid-item grid-item-random white-text">
+        <div class="case-item-bg"></div>
         <h3 class="grid-item-header">Random facts</h3>
-        <div class="grid-item-content">Content goes here</div>
+        <div class="grid-item-content">
+          <ul>
+            <li>I drink a lot of tea</li>
+            <li>I think colors make the world a better place</li>
+            <li>I like funny people</li>
+            <li>I love veggies</li>
+            <li>I wold like to go paragliding</li>
+          </ul>
+          <button>My CV</button>
+        </div>
       </div>
     </div>
 
 
     <div class="content-wrapper grid-items">
       <h3 class="section-header">Portfolio</h3>
-      <div class="grid-item">
-        <h3 class="grid-item-header">More coming up</h3>
+
+      <div class="grid-item grid-item-project" id="bookmark-portfolio">
+        <h3 class="grid-item-header">Project</h3>
         <div class="grid-item-content">Content goes here</div>
       </div>
-      <div class="grid-item">
-        <h3 class="<grid-item-></grid-item->header">Project</h3>
-        <div class="grid-item-content">Content goes here</div>
+
+      <div class="grid-item grid-item-github white-text" id="bookmark-github">
+        <h3 class="<grid-item-header">Github</h3>
+        <div class="grid-item-content">
+          <img id="logo" src="./img/github.png" alt="Github">
+          <p>Rome wasn't built on a day, but this is how far I've come.
+          Check out my repos with school projects.</p>
+          </div>
       </div>
-      <div class="grid-item">
-        <h3 class="grid-item-header">GitHub</h3>
-        <div class="grid-item-content">Content goes here</div>
+
+    <div class="grid-item grid-item-coming white-text">
+      <div class="case-item-bg"></div>
+      <h3 class="grid-item-header">Coming</h3>
+      <div class="grid-item-content">
+        <p>Text</p>
       </div>
+    </div>
     </div>
 
     <div class="content-wrapper grid-items">
       <h3 class="section-header">Contact</h3>
+      <div class="grid-item" id="bookmark-contact">
+        <h3 class="grid-item-header">Hello</h3>
+        <div class="grid-item-content">Content goes here</div>
+      </div>
       <div class="grid-item">
         <h3 class="grid-item-header">Hello</h3>
         <div class="grid-item-content">Content goes here</div>
       </div>
     </div>
-        </div>
+
   </body>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
   <script src="skillbar.js"></script>
 
-  <script>
-
-
-
-
-  </script>
 </html>
