--- a/index.html
+++ b/index.html
@@ -11,54 +11,34 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
   </head>
   <body>
-    <div class="navbar-container">
-      <div class="site-nav-animation-wrapper menu-animation-wrapper">
-        <div class="site-nav-animated-background menu-animated-background"></div>
-        </div>
-        <a href="/" class="menu ">
+
+      <div class="nav">
+        <ul>
+        <li>
+        <a href="#" class="menu">
         <span class="menu-icon-line-1 menu-icon-line"></span>
         <span class="menu-icon-line-2 menu-icon-line"></span>
         <span class="menu-icon-line-3 menu-icon-line"></span>
         </a>
-
-        <div class="site-nav-overlay js-nav">
-          <div class="nav-content">
-            <div class="js-nav-header nav-header">
-              <span class="nav-header-text">Sandra.O</span>
-              <div class="nav-header-line js-nav-header-line"></div>
-            </div>
-
-            <ul class="nav-categories">
-              <li class="nav-category js-nav-animate"><a href="#bookmark-about" class="nav-link">About</a></li>
-              <li class="nav-category js-nav-animate"><a href="#bookmark-portfolio" class="nav-link">Portfolio</a></li>
-              <li class="nav-category js-nav-animate"><a href="#bookmark-github" class="nav-link">GitHub</a></li>
-              <li class="nav-category js-nav-animate"><a href="#bookmark-contact" class="nav-link">Contact</a></li>
+            <ul class="">
+              <li class=""><a href="#bookmark-about" class="">About</a></li>
+              <li class=""><a href="#bookmark-portfolio" class="">Portfolio</a></li>
+              <li class=""><a href="#bookmark-github" class="">GitHub</a></li>
+              <li class=""><a href="#bookmark-contact" class="">Contact</a></li>
             </ul>
-          </div>
+            </li>
+          </ul>
         </div>
-
-        <h1 class="site-name site-name-portfolio">
-        <a class="siteLogoLink " href="/">
-        <svg class="siteHead-logoMark"xmlns="http://www.w3.org/2000/svg" width="47.25" height="26" viewBox="0 0 47.25 26">
-        <path fill="currentColor" d="M1302.67,72.311a0.994,0.994,0,0,0-1.78-.016l-15.91,23.358a0.775,0.775,0,0,0,.7,1.328h10.61a3.292,3.292,0,0,0,2.47-1.347l1.81-2.793a0.967,0.967,0,0,1,1.75,0l1.81,2.793a3.311,3.311,0,0,0,2.48,1.347h10.6a0.793,0.793,0,0,0,.73-1.344Zm-12.42,12.739c0.5-.727,1.22-1.782,1.6-2.344s1.09-1.622,1.58-2.356l5.4-8.01a0.778,0.778,0,0,0-.71-1.332l-25.58-.032a1.611,1.611,0,0,0-1.61,1.607v7.7a1.609,1.609,0,0,0,1.61,1.6l7.84,0a1.607,1.607,0,0,1,1.6,1.6V95.437c0,0.883.41,1.011,0.91,0.284Zm0,0c0.5-.727,1.22-1.782,1.6-2.344s1.09-1.622,1.58-2.356l5.4-8.01a0.778,0.778,0,0,0-.71-1.332l-25.58-.032a1.611,1.611,0,0,0-1.61,1.607v7.7a1.609,1.609,0,0,0,1.61,1.6l7.84,0a1.607,1.607,0,0,1,1.6,1.6V95.437c0,0.883.41,1.011,0.91,0.284Z" transform="translate(-1270.94 -70.969)"/>
-        </svg>
-        </a>
-        </h1>
-
-    </div>
 
     <div class="content-wrapper heroSection">
       <h3 class="header-subheader">sandra.o</h3>
       <h2 class="single-page-header header-header">Front End <br> Developer</h2>
       <h2 class="header-header2">student</h2>
-      <div class="arrow bounce"><i class="fa fa-arrow-circle-down fa-3x" aria-hidden="true"></i></div>
-</div>
-
+    </div>
     </div>
 
     <div class="content-wrapper grid-items gridItems-peak">
-      <h3 class="section-header">About</h3>
-
+      <h3 class="section-header">I want to design and develop digital experiences that make life easy. </h3>
         <div class="grid-item grid-item-skills" id="bookmark-about">
         <h3 class="grid-item-header">Skills</h3>
         <div class="grid-item-content" id="skills-content"></div>
@@ -71,60 +51,69 @@
           <p>I'm currently studying a 2-year program at Medieinstitutet with a mission to become an awesome Front-end developer.
           Check out my education here.</p>
           </div>
+          <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
       </div>
 
       <div class="grid-item grid-item-random white-text">
-        <div class="case-item-bg"></div>
-        <h3 class="grid-item-header">Random facts</h3>
+        <h3 class="grid-item-header gray-text">Random facts</h3>
         <div class="grid-item-content">
-          <ul>
+          <ul class="random-list">
             <li>I drink a lot of tea</li>
-            <li>I think colors make the world a better place</li>
-            <li>I like funny people</li>
+            <li>I have experience in graphic design</li>
+            <li>I enjoy teamworking in projects</li>
             <li>I love veggies</li>
-            <li>I wold like to go paragliding</li>
+            <li>I would like to go paragliding</li>
           </ul>
-          <button>My CV</button>
+          <p>Want to know some more serious stuff?</p>
+
         </div>
+        <a href="http://medieinstitutet.se/front-end-developer/"  class="btn">Download CV</a>
       </div>
     </div>
 
 
-    <div class="content-wrapper grid-items">
-      <h3 class="section-header">Portfolio</h3>
-
-      <div class="grid-item grid-item-project" id="bookmark-portfolio">
-        <h3 class="grid-item-header">Project</h3>
-        <div class="grid-item-content">Content goes here</div>
+    <div class="content-wrapper grid-items" id="bookmark-portfolio">
+      <h3 class="section-header">Check out some of the things I have done so far.</h3>
+      <div class="grid-item grid-item-project1">
+        <h3 class="grid-item-header">Ticket app</h3>
+        <div class="grid-item-content">
+          <p>School project working with Vue.js, MongoDB and Node Express</p>
+        </div>
+        <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
       </div>
 
       <div class="grid-item grid-item-github white-text" id="bookmark-github">
-        <h3 class="<grid-item-header">Github</h3>
+        <h3 class="grid-item-header">Github</h3>
         <div class="grid-item-content">
           <img id="logo" src="./img/github.png" alt="Github">
           <p>Rome wasn't built on a day, but this is how far I've come.
           Check out my repos with school projects.</p>
           </div>
+          <a href="http://medieinstitutet.se/front-end-developer/"  class="btn">Download CV</a>
       </div>
 
-    <div class="grid-item grid-item-coming white-text">
-      <div class="case-item-bg"></div>
-      <h3 class="grid-item-header">Coming</h3>
-      <div class="grid-item-content">
-        <p>Text</p>
+    <div class="grid-item grid-item-project2 white-text">
+      <h3 class="grid-item-header gray-text">Quiz game</h3>
+      <div class="grid-item-content white-text">
+        <p>School project working with Vue.js, Firebase and Scrum</p>
       </div>
+      <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
     </div>
     </div>
 
-    <div class="content-wrapper grid-items">
-      <h3 class="section-header">Contact</h3>
-      <div class="grid-item" id="bookmark-contact">
-        <h3 class="grid-item-header">Hello</h3>
-        <div class="grid-item-content">Content goes here</div>
+    <div class="content-wrapper grid-items"  id="bookmark-contact">
+      <h3 class="section-header">Say hello or maybe join me for a cup of tea</h3>
+      <div class="grid-item grid-item-contact">
+        <h3><a class="grid-item-header e-mail" href="mailto:otterstensandra@gmail.com">otterstensandra@<br>gmail.com</a></h3>
+        <div class="grid-item-content">
+          <p></p>
+          <a href="www.linkedin.com/in/sandra-ottersten-048671109" target="_blank"><img id="linkedin" src="./img/linkedinlogo.png" alt="linkedin"></a>
+          <a href="www.linkedin.com/in/sandra-ottersten-048671109" target="_blank"><img id="linkedin" src="./img/githubblack.png" alt="github"></a>
+        </div>
+
       </div>
-      <div class="grid-item">
-        <h3 class="grid-item-header">Hello</h3>
-        <div class="grid-item-content">Content goes here</div>
+
+      <div class="grid-item grid-item-me">
       </div>
     </div>
 
