--- a/index.html
+++ b/index.html
@@ -1,126 +1,122 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>sandra.o</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="style2.css">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,100' rel='stylesheet' type='text/css'>
-    <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
-  </head>
-  <body>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>sandra.o</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style2.css">
+  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,100' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
+</head>
+<body>
 
-      <div class="nav">
-        <ul>
-        <li>
+  <div class="nav">
+    <ul>
+      <li>
         <a href="#" class="menu">
-        <span class="menu-icon-line-1 menu-icon-line"></span>
-        <span class="menu-icon-line-2 menu-icon-line"></span>
-        <span class="menu-icon-line-3 menu-icon-line"></span>
+          <span class="menu-icon-line-1 menu-icon-line"></span>
+          <span class="menu-icon-line-2 menu-icon-line"></span>
+          <span class="menu-icon-line-3 menu-icon-line"></span>
         </a>
-            <ul class="">
-              <li class=""><a href="#bookmark-about" class="">About</a></li>
-              <li class=""><a href="#bookmark-portfolio" class="">Portfolio</a></li>
-              <li class=""><a href="#bookmark-github" class="">GitHub</a></li>
-              <li class=""><a href="#bookmark-contact" class="">Contact</a></li>
-            </ul>
-            </li>
-          </ul>
-        </div>
+        <ul class="">
+          <li class=""><a href="#bookmark-about" class="">About</a></li>
+          <li class=""><a href="#bookmark-portfolio" class="">Portfolio</a></li>
+          <li class=""><a href="#bookmark-github" class="">GitHub</a></li>
+          <li class=""><a href="#bookmark-contact" class="">Contact</a></li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 
-    <div class="content-wrapper heroSection">
-      <h3 class="header-subheader">sandra.o</h3>
-      <h2 class="single-page-header header-header">Front End <br> Developer</h2>
-      <h2 class="header-header2">student</h2>
-    </div>
-    </div>
+  <div class="content-wrapper heroSection">
+    <h3 class="header-subheader">sandra.o</h3>
+    <h2 class="single-page-header header-header">Front End <br> Developer <br><span>Student</span></h2>
+  </div>
+</div>
 
-    <div class="content-wrapper grid-items gridItems-peak">
-      <h3 class="section-header">I want to design and develop digital experiences that make life easy. </h3>
-        <div class="grid-item grid-item-skills" id="bookmark-about">
-        <h3 class="grid-item-header">Skills</h3>
-        <div class="grid-item-content" id="skills-content"></div>
+<div class="content-wrapper grid-items gridItems-peak">
+  <h3 class="section-header">I want to design and develop digital experiences that make your life simple </h3>
+  <div class="grid-item grid-item-skills" id="bookmark-about">
+    <h3 class="grid-item-header">Skills</h3>
+    <div class="grid-item-content" id="skills-content"></div>
+  </div>
+
+  <div class="grid-item grid-item-education">
+    <h3 class="grid-item-header">Education</h3>
+    <div class="grid-item-content">
+      <img id="logo" src="./img/logoMI.png" alt="Medieinstitutet">
+      <p>I'm currently studying in a 2-year program at Medieinstitutet with a mission to become an awesome Front-end developer.
+        Want to know more? Check out my education here.</p>
       </div>
-
-      <div class="grid-item grid-item-education">
-        <h3 class="grid-item-header">Education</h3>
-        <div class="grid-item-content">
-          <img id="logo" src="./img/logoMI.png" alt="Medieinstitutet">
-          <p>I'm currently studying a 2-year program at Medieinstitutet with a mission to become an awesome Front-end developer.
-          Check out my education here.</p>
-          </div>
-          <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
-      </div>
-
-      <div class="grid-item grid-item-random white-text">
-        <h3 class="grid-item-header gray-text">Random facts</h3>
-        <div class="grid-item-content">
-          <ul class="random-list">
-            <li>I drink a lot of tea</li>
-            <li>I have experience in graphic design</li>
-            <li>I enjoy teamworking in projects</li>
-            <li>I love veggies</li>
-            <li>I would like to go paragliding</li>
-          </ul>
-          <p>Want to know some more serious stuff?</p>
-
-        </div>
-        <a href="http://medieinstitutet.se/front-end-developer/"  class="btn">Download CV</a>
-      </div>
+      <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
     </div>
 
+    <div class="grid-item grid-item-random white-text">
+      <h3 class="grid-item-header gray-text">Random facts</h3>
+      <div class="grid-item-content">
+        <ul class="random-list">
+          <li>I drink a lot of tea</li>
+          <li>I have experience in graphic design</li>
+          <li>I enjoy teamworking in projects</li>
+          <li>I love almonds</li>
+          <li>I would like to go paragliding</li>
+        </ul>
+        <p>Want to know some more serious stuff?</p>
 
-    <div class="content-wrapper grid-items" id="bookmark-portfolio">
-      <h3 class="section-header">Check out some of the things I have done so far.</h3>
-      <div class="grid-item grid-item-project1">
-        <h3 class="grid-item-header">Ticket app</h3>
-        <div class="grid-item-content">
-          <p>School project working with Vue.js, MongoDB and Node Express</p>
-        </div>
-        <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
       </div>
+      <a href="http://www.sandrao.se/documents/cv.pdf" target="_blank" class="btn">Take a look at my CV</a>
+    </div>
+  </div>
 
-      <div class="grid-item grid-item-github white-text" id="bookmark-github">
-        <h3 class="grid-item-header">Github</h3>
-        <div class="grid-item-content">
-          <img id="logo" src="./img/github.png" alt="Github">
-          <p>Rome wasn't built on a day, but this is how far I've come.
-          Check out my repos with school projects.</p>
-          </div>
-          <a href="http://medieinstitutet.se/front-end-developer/"  class="btn">Download CV</a>
+
+  <div class="content-wrapper grid-items" id="bookmark-portfolio">
+    <h3 class="section-header">Check out some of the things I have done so far.</h3>
+    <div class="grid-item grid-item-project1">
+      <h3 class="grid-item-header">Ticket app</h3>
+      <div class="grid-item-content">
+        <p>School project working with Vue.js, MongoDB and Node Express</p>
       </div>
+      <a href="https://github.com/sandraottersten/ticketapp" target="_blank" class="btn">Read more</a>
+    </div>
+
+    <div class="grid-item grid-item-github white-text" id="bookmark-github">
+      <h3 class="grid-item-header">Github</h3>
+      <div class="grid-item-content">
+        <img id="logo" src="./img/github.png" alt="Github">
+        <p>More is coming. Until then, take a look at my school projects at GitHub.</p>
+      </div>
+      <a href="https://github.com/sandraottersten"  class="btn">To GitHub</a>
+    </div>
 
     <div class="grid-item grid-item-project2 white-text">
       <h3 class="grid-item-header gray-text">Quiz game</h3>
       <div class="grid-item-content white-text">
         <p>School project working with Vue.js, Firebase and Scrum</p>
       </div>
-      <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
+      <a href="https://github.com/sandraottersten" target="_blank" class="btn">Read more</a>
     </div>
-    </div>
+  </div>
 
-    <div class="content-wrapper grid-items"  id="bookmark-contact">
-      <h3 class="section-header">Say hello or maybe join me for a cup of tea</h3>
-      <div class="grid-item grid-item-contact">
-        <h3><a class="grid-item-header e-mail" href="mailto:otterstensandra@gmail.com">otterstensandra@<br>gmail.com</a></h3>
-        <div class="grid-item-content">
-          <p></p>
-          <a href="www.linkedin.com/in/sandra-ottersten-048671109" target="_blank"><img id="linkedin" src="./img/linkedinlogo.png" alt="linkedin"></a>
-          <a href="www.linkedin.com/in/sandra-ottersten-048671109" target="_blank"><img id="linkedin" src="./img/githubblack.png" alt="github"></a>
-        </div>
-
-      </div>
-
-      <div class="grid-item grid-item-me">
+  <div class="content-wrapper grid-items"  id="bookmark-contact">
+    <h3 class="section-header">Say hello or maybe join me for a cup of tea</h3>
+    <div class="grid-item grid-item-contact">
+      <h3><a class="grid-item-header e-mail" href="mailto:otterstensandra@gmail.com">otterstensandra@<br>gmail.com</a></h3>
+      <div class="grid-item-content">
+        <p></p>
+        <a href="www.linkedin.com/in/sandra-ottersten-048671109" target="_blank"><img id="linkedin" src="./img/linkedinlogo.png" alt="linkedin"></a>
+        <a href="https://github.com/sandraottersten" target="_blank"><img id="linkedin" src="./img/githubblack.png" alt="github"></a>
       </div>
     </div>
 
-  </body>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
+    <div class="grid-item grid-item-me">
+    </div>
+  </div>
+</body>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/wow/1.1.2/wow.min.js"></script>
 
-  <script src="skillbar.js"></script>
+<script src="skillbar.js"></script>
 
 </html>
