--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>sandra.o</title>
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="style2.css">
-  <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700,100' rel='stylesheet' type='text/css'>
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300,700" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Nothing+You+Could+Do" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.1/css/font-awesome.min.css">
 </head>
@@ -32,29 +32,29 @@
 
   <div class="content-wrapper heroSection">
     <h3 class="header-subheader">sandra.o</h3>
-    <h2 class="single-page-header header-header">Front End <br> Developer <br><span>Student</span></h2>
+    <h2 class="single-page-header header-header">FRONT END <br> DEVELOPER <br><span>STUDENT</span></h2>
   </div>
 </div>
 
 <div class="content-wrapper grid-items gridItems-peak">
-  <h3 class="section-header">I want to design and develop digital experiences that make your life simple </h3>
+  <h3 class="section-header">I want to design and develop digital experiences that make life simple </h3>
   <div class="grid-item grid-item-skills" id="bookmark-about">
-    <h3 class="grid-item-header">Skills</h3>
+    <h3 class="grid-item-header">SKILLS</h3>
     <div class="grid-item-content" id="skills-content"></div>
   </div>
 
   <div class="grid-item grid-item-education">
-    <h3 class="grid-item-header">Education</h3>
+    <h3 class="grid-item-header">EDUCATION</h3>
     <div class="grid-item-content">
       <img id="logo" src="./img/logoMI.png" alt="Medieinstitutet">
       <p>I'm currently studying in a 2-year program at Medieinstitutet with a mission to become an awesome Front-end developer.
         Want to know more? Check out my education here.</p>
       </div>
-      <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn">Read more</a>
+      <a href="http://medieinstitutet.se/front-end-developer/" target="_blank" class="btn black">Read more</a>
     </div>
 
     <div class="grid-item grid-item-random white-text">
-      <h3 class="grid-item-header gray-text">Random facts</h3>
+      <h3 class="grid-item-header gray-text">RANDOM FACTS</h3>
       <div class="grid-item-content">
         <ul class="random-list">
           <li>I drink a lot of tea</li>
@@ -66,43 +66,44 @@
         <p>Want to know some more serious stuff?</p>
 
       </div>
-      <a href="http://www.sandrao.se/documents/cv.pdf" target="_blank" class="btn">Take a look at my CV</a>
+      <a href="http://www.sandrao.se/documents/cv.pdf" target="_blank" class="btn white">My CV</a>
     </div>
   </div>
 
 
   <div class="content-wrapper grid-items" id="bookmark-portfolio">
-    <h3 class="section-header">Check out some of the things I have done so far.</h3>
+    <h3 class="section-header">Check out some of the things I have done so far. And more is coming</h3>
     <div class="grid-item grid-item-project1">
-      <h3 class="grid-item-header">Ticket app</h3>
+      <h3 class="grid-item-header">TICKET APP</h3>
       <div class="grid-item-content">
         <p>School project working with Vue.js, MongoDB and Node Express</p>
       </div>
-      <a href="https://github.com/sandraottersten/ticketapp" target="_blank" class="btn">Read more</a>
+      <a href="https://github.com/sandraottersten/ticketapp" target="_blank" class="btn black">Read more</a>
     </div>
 
-    <div class="grid-item grid-item-github white-text" id="bookmark-github">
-      <h3 class="grid-item-header">Github</h3>
+    <div class="grid-item grid-item-project3 white-text" id="bookmark-github">
+      <h3 class="grid-item-header">MEMORY GAME</h3>
       <div class="grid-item-content">
-        <img id="logo" src="./img/github.png" alt="Github">
-        <p>More is coming. Until then, take a look at my school projects at GitHub.</p>
+        <p>A simple game for all donut lovers. Made with vanilla JS. </p>
       </div>
-      <a href="https://github.com/sandraottersten"  class="btn">To GitHub</a>
+      <a href="http://www.sandrao.se/memory-game"  class="btn black">Play</a>
     </div>
 
     <div class="grid-item grid-item-project2 white-text">
-      <h3 class="grid-item-header gray-text">Quiz game</h3>
+      <h3 class="grid-item-header gray-text">QUIZ GAME</h3>
       <div class="grid-item-content white-text">
-        <p>School project working with Vue.js, Firebase and Scrum</p>
+        <p>School project working with Vue.js, Firebase and the agile project management Scrum</p>
       </div>
-      <a href="https://github.com/sandraottersten" target="_blank" class="btn">Read more</a>
+      <a href="https://github.com/sandraottersten/gbg-quiz" target="_blank" class="btn white">GitHub</a>
     </div>
   </div>
 
   <div class="content-wrapper grid-items"  id="bookmark-contact">
     <h3 class="section-header">Say hello or maybe join me for a cup of tea</h3>
     <div class="grid-item grid-item-contact">
-      <h3><a class="grid-item-header e-mail" href="mailto:otterstensandra@gmail.com">otterstensandra@<br>gmail.com</a></h3>
+      <h3>Sandra Ottersten</h3>
+      <h5>Göteborg</h5>
+      <h3><a class="e-mail" href="mailto:otterstensandra@gmail.com">otterstensandra@gmail.com</a></h3>
       <div class="grid-item-content">
         <p></p>
         <a href="www.linkedin.com/in/sandra-ottersten-048671109" target="_blank"><img id="linkedin" src="./img/linkedinlogo.png" alt="linkedin"></a>
