--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
         <ul class="random-list">
           <li>I drink a lot of tea</li>
           <li>I have experience in graphic design</li>
-          <li>I enjoy teamworking in projects</li>
-          <li>I love almonds</li>
+          <li>I love vietnamese food</li>
+          <li>I enjoy working agile in projects</li>
           <li>I would like to go paragliding</li>
         </ul>
         <p>Want to know some more serious stuff?</p>
@@ -81,7 +81,7 @@
       <a href="https://github.com/sandraottersten/ticketapp" target="_blank" class="btn black">Read more</a>
     </div>
 
-    <div class="grid-item grid-item-project3 white-text" id="bookmark-github">
+    <div class="grid-item grid-item-project3">
       <h3 class="grid-item-header">MEMORY GAME</h3>
       <div class="grid-item-content">
         <p>A simple game for all donut lovers. Made with vanilla JS. </p>
@@ -100,7 +100,7 @@
 
   <div class="content-wrapper grid-items"  id="bookmark-contact">
     <h3 class="section-header">Say hello or maybe join me for a cup of tea</h3>
-    <div class="grid-item grid-item-contact">
+    <div class="grid-item grid-item-contact" id="bookmark-github">
       <h3>Sandra Ottersten</h3>
       <h5>Göteborg</h5>
       <h3><a class="e-mail" href="mailto:otterstensandra@gmail.com">otterstensandra@gmail.com</a></h3>
